# yab

./: CMakeLists.txt  README
sources/gidway/: DOM.hh
sources/gidway/algorithms/streams/: chars.hh
sources/gidway/html/: doc.cc  doc.hh  dom.hh  element.hh
sources/gidway/logs/: debug.hh
sources/gidway/parsers/: html.cc  html.hh  parser.hh
sources/gidway/utils/: size.hh  stream.hh
sources/gidway/xml/: doc.hh  dom.hh  node.hh
tests/: CMakeLists.txt
tests/utests/: CMakeLists.txt  DummyTest.cc  HTMLParserTest.cc  SizeTest.cc  main.cc
yab/: main.cc
