# Copyright (C) 2017 Gidway, PL :: gidway.net
cmake_minimum_required(VERSION 3.0)
project(yab-tests)

message(":: ###################################################")
message(":: Tests CMake")
message(":: ###################################################")

message("(d) PROJECT_NAME  = ${PROJECT_NAME} ")

add_subdirectory(utests)
